--- a/theme/marketshop1/include/left.phtml
+++ b/theme/marketshop1/include/left.phtml
@@ -1,252 +1,12 @@
 
-<h3 class="subtitle">Bestsellers</h3>
-<div class="side-item">
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/apple_cinema_30-50x50.jpg" alt="Brand Fashion Cotton T-Shirt" title="Brand Fashion Cotton T-Shirt" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Brand Fashion Cotton T-Shirt</a></h4>
-			<p class="price">
-				<span class="price-new">$110.00</span><span class="price-old">$122.00</span><span class="saving">-10%</span>
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/iphone_1-50x50.jpg" alt="iPhone5" title="iPhone5" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">iPhone5</a></h4>
-			<p class="price">
-				 $123.20
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_1-50x50.jpg" alt="Ideapad Yoga 13-59341124 Laptop" title="Ideapad Yoga 13-59341124 Laptop" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Ideapad Yoga 13-59341124 Laptop</a></h4>
-			<p class="price">
-				 $2.00
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/sony_vaio_1-50x50.jpg" alt="Xitefun Causal Wear Fancy Shoes" title="Xitefun Causal Wear Fancy Shoes" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Xitefun Causal Wear Fancy Shoes</a></h4>
-			<p class="price">
-				<span class="price-new">$902.00</span><span class="price-old">$1,202.00</span><span class="saving">-25%</span>
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/FinePix-Long-Zoom-Camera-50x50.jpg" alt="FinePix S8400W Long Zoom Camera" title="FinePix S8400W Long Zoom Camera" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">FinePix S8400W Long Zoom Camera</a></h4>
-			<p class="price">
-				$122.00
-			</p>
-		</div>
-	</div>
-</div>
-<h3 class="subtitle">Specials</h3>
-<div class="side-item">
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_pro_1-50x50.jpg" alt=" Strategies for Acquiring Your Own Laptop " title=" Strategies for Acquiring Your Own Laptop " class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Strategies for Acquiring Your Own Laptop</a></h4>
-			<p class="price">
-				<span class="price-new">$1,400.00</span><span class="price-old">$1,900.00</span><span class="saving">-26%</span>
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/samsung_tab_1-50x50.jpg" alt="Aspire Ultrabook Laptop" title="Aspire Ultrabook Laptop" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Aspire Ultrabook Laptop</a></h4>
-			<p class="price">
-				<span class="price-new">$230.00</span><span class="price-old">$241.99</span><span class="saving">-5%</span>
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/apple_cinema_30-50x50.jpg" alt="Brand Fashion Cotton T-Shirt" title="Brand Fashion Cotton T-Shirt" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="http://demo.harnishdesign.net/opencart/marketshop/v1/index.php?route=product/product&amp;product_id=42">Brand Fashion Cotton T-Shirt</a></h4>
-			<p class="price">
-				<span class="price-new">$110.00</span><span class="price-old">$122.00</span><span class="saving">-10%</span>
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/nikon_d300_1-50x50.jpg" alt="Digital Camera for Elderly" title="Digital Camera for Elderly" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Digital Camera for Elderly</a></h4>
-			<p class="price">
-				<span class="price-new">$92.00</span><span class="price-old">$98.00</span><span class="saving">-6%</span>
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/nikon_d300_5-50x50.jpg" alt="Hair Care Products" title="Hair Care Products" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Hair Care Products</a></h4>
-			<p class="price">
-				<span class="price-new">$66.80</span><span class="price-old">$90.80</span><span class="saving">-27%</span>
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_air_1-50x50.jpg" alt="Laptop Silver black" title="Laptop Silver black" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Laptop Silver black</a></h4>
-			<p class="price">
-				<span class="price-new">$1,142.00</span><span class="price-old">$1,202.00</span><span class="saving">-5%</span>
-			</p>
-		</div>
-	</div>
-</div>
-<div class="list-group">
-	<h3 class="subtitle">Custom Content</h3>
-	<p>
-		This is a CMS block edited from admin. You can insert any content (HTML, Text, Images) Here.
-	</p>
-	<p>
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-	</p>
-	<p>
-		It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-	</p>
-</div>
-<div class="banner owl-carousel">
-	<div class="item">
-		<a href="#"><img src="image/banner/small-banner1-265x350.jpg" alt="small banner" class="img-responsive"/></a>
-	</div>
-	<div class="item">
-		<a href="#"><img src="image/banner/small-banner-265x350.jpg" alt="small banner1" class="img-responsive"/></a>
-	</div>
-</div>
-<h3 class="subtitle">Latest</h3>
-<div class="side-item">
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/iphone_6-50x50.jpg" alt="Hair Care Cream for Men" title="Hair Care Cream for Men" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Hair Care Cream for Men</a></h4>
-			<p class="price">
-				 $134.00
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/nikon_d300_5-50x50.jpg" alt="Hair Care Products" title="Hair Care Products" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Hair Care Products</a></h4>
-			<p class="price">
-				<span class="price-new">$66.80</span><span class="price-old">$90.80</span><span class="saving">-27%</span>
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/nikon_d300_4-50x50.jpg" alt="Bed Head Foxy Curls Contour Cream" title="Bed Head Foxy Curls Contour Cream" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Bed Head Foxy Curls Contour Cream</a></h4>
-			<p class="price">
-				 $88.00
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_5-50x50.jpg" alt="Shower Gel Perfume for Women" title="Shower Gel Perfume for Women" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Shower Gel Perfume for Women</a></h4>
-			<p class="price">
-				<span class="price-new">$95.00</span><span class="price-old">$99.00</span><span class="saving">-4%</span>
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_4-50x50.jpg" alt="Perfumes for Women" title="Perfumes for Women" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Perfumes for Women</a></h4>
-			<p class="price">
-				 $85.00
-			</p>
-			<div class="rating">
-				<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
-			</div>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_3-50x50.jpg" alt="Make Up for Naturally Beautiful Better" title="Make Up for Naturally Beautiful Better" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Make Up for Naturally Beautiful Better</a></h4>
-			<p class="price">
-				 $123.00
-			</p>
-		</div>
-	</div>
-	<div class="product-thumb clearfix">
-		<div class="image">
-			<a href="product.html"><img src="image/product/macbook_2-50x50.jpg" alt="Pnina Tornai Perfume" title="Pnina Tornai Perfume" class="img-responsive"/></a>
-		</div>
-		<div class="caption">
-			<h4><a href="product.html">Pnina Tornai Perfume</a></h4>
-			<p class="price">
-				 $110.00
-			</p>
-		</div>
-	</div>
-</div>
+<!--#INCLUDE FILE="../custom/include_best_sellers.phtml"-->
+<!--#INCLUDE FILE="../custom/include_specials.phtml"-->
+<%
+	g_static_block_code = "TPL_MARKETSHOP1_LEFT1"
+%>
+<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+<%
+	g_static_block_code = "TPL_MARKETSHOP1_LEFT2"
+%>
+<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+<!--#INCLUDE FILE="../custom/include_latest.phtml"-->
