--- a/theme/marketshop1/include/product.phtml
+++ b/theme/marketshop1/include/product.phtml
@@ -43,10 +43,10 @@
 
 						<ul class="list-unstyled description">
 							<% if Len(x_vendor_name) > 0 then %>
-							<li><b><%=a("Brand")%>:</b> <a href="#"><span itemprop="brand"><%=x_vendor_name%></span></a></li>
+							<li><b><%=a("Brand")%>:</b><a href="#"><span itemprop="brand"><%=x_vendor_name%></span></a></li>
 							<% end if %>
 							<% if Len(x_prod_manu_part_num) > 0 then %>
-							<li><b><%=a("Mfg. Part #")%>:</b> <a href="#"><span itemprop="brand"><%=x_prod_manu_part_num%></span></a></li>
+							<li><b><%=a("Mfg. Part #")%>:</b><a href="#"><span itemprop="brand"><%=x_prod_manu_part_num%></span></a></li>
 							<% end if %>
 							<li><b><%=a("SKU")%>:</b><span itemprop="mpn"><%=x_prod_sku%></span></li>
 							<li><b><%=a("Availability")%>:</b> <span class="instock"><%=x_prod_stock_status_display%></span></li>
@@ -371,160 +371,12 @@
 		<!--Middle Part End -->
 		<!--Right Part Start -->
 		<aside id="column-right" class="col-sm-3 hidden-xs">
-		<h3 class="subtitle">Bestsellers</h3>
-		<div class="side-item">
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/apple_cinema_30-50x50.jpg" alt="Brand Fashion Cotton T-Shirt" title="Brand Fashion Cotton T-Shirt" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Brand Fashion Cotton T-Shirt</a></h4>
-					<p class="price">
-						<span class="price-new">$110.00</span><span class="price-old">$122.00</span><span class="saving">-10%</span>
-					</p>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/iphone_1-50x50.jpg" alt="iPhone5" title="iPhone5" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">iPhone5</a></h4>
-					<p class="price">
-						 $123.20
-					</p>
-					<div class="rating">
-						<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-					</div>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/macbook_1-50x50.jpg" alt="Ideapad Yoga 13-59341124 Laptop" title="Ideapad Yoga 13-59341124 Laptop" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Ideapad Yoga 13-59341124 Laptop</a></h4>
-					<p class="price">
-						 $2.00
-					</p>
-					<div class="rating">
-						<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-					</div>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/sony_vaio_1-50x50.jpg" alt="Xitefun Causal Wear Fancy Shoes" title="Xitefun Causal Wear Fancy Shoes" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Xitefun Causal Wear Fancy Shoes</a></h4>
-					<p class="price">
-						<span class="price-new">$902.00</span><span class="price-old">$1,202.00</span><span class="saving">-25%</span>
-					</p>
-					<div class="rating">
-						<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-					</div>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/FinePix-Long-Zoom-Camera-50x50.jpg" alt="FinePix S8400W Long Zoom Camera" title="FinePix S8400W Long Zoom Camera" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">FinePix S8400W Long Zoom Camera</a></h4>
-					<p class="price">
-						$122.00
-					</p>
-				</div>
-			</div>
-		</div>
-		<div class="list-group">
-			<h3 class="subtitle">Custom Content</h3>
-			<p>
-				This is a CMS block edited from admin. You can insert any content (HTML, Text, Images) Here.
-			</p>
-			<p>
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-			</p>
-			<p>
-				It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-			</p>
-		</div>
-		<h3 class="subtitle">Specials</h3>
-		<div class="side-item">
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/macbook_pro_1-50x50.jpg" alt=" Strategies for Acquiring Your Own Laptop " title=" Strategies for Acquiring Your Own Laptop " class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Strategies for Acquiring Your Own Laptop</a></h4>
-					<p class="price">
-						<span class="price-new">$1,400.00</span><span class="price-old">$1,900.00</span><span class="saving">-26%</span>
-					</p>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/samsung_tab_1-50x50.jpg" alt="Aspire Ultrabook Laptop" title="Aspire Ultrabook Laptop" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Aspire Ultrabook Laptop</a></h4>
-					<p class="price">
-						<span class="price-new">$230.00</span><span class="price-old">$241.99</span><span class="saving">-5%</span>
-					</p>
-					<div class="rating">
-						<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-					</div>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/apple_cinema_30-50x50.jpg" alt="Brand Fashion Cotton T-Shirt" title="Brand Fashion Cotton T-Shirt" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="http://demo.harnishdesign.net/opencart/marketshop/v1/index.php?route=product/product&amp;product_id=42">Brand Fashion Cotton T-Shirt</a></h4>
-					<p class="price">
-						<span class="price-new">$110.00</span><span class="price-old">$122.00</span><span class="saving">-10%</span>
-					</p>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/nikon_d300_1-50x50.jpg" alt="Digital Camera for Elderly" title="Digital Camera for Elderly" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Digital Camera for Elderly</a></h4>
-					<p class="price">
-						<span class="price-new">$92.00</span><span class="price-old">$98.00</span><span class="saving">-6%</span>
-					</p>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/nikon_d300_5-50x50.jpg" alt="Hair Care Products" title="Hair Care Products" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Hair Care Products</a></h4>
-					<p class="price">
-						<span class="price-new">$66.80</span><span class="price-old">$90.80</span><span class="saving">-27%</span>
-					</p>
-					<div class="rating">
-						<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-					</div>
-				</div>
-			</div>
-			<div class="product-thumb clearfix">
-				<div class="image">
-					<a href="product.html"><img src="image/product/macbook_air_1-50x50.jpg" alt="Laptop Silver black" title="Laptop Silver black" class="img-responsive"/></a>
-				</div>
-				<div class="caption">
-					<h4><a href="product.html">Laptop Silver black</a></h4>
-					<p class="price">
-						<span class="price-new">$1,142.00</span><span class="price-old">$1,202.00</span><span class="saving">-5%</span>
-					</p>
-				</div>
-			</div>
-		</div>
+		<!--#INCLUDE FILE="../custom/include_best_sellers.phtml"-->
+		<%
+			g_static_block_code = "TPL_MARKETSHOP1_LEFT1"
+		%>
+		<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+		<!--#INCLUDE FILE="../custom/include_specials.phtml"-->
 		</aside>
 		<!--Right Part End -->
 	</div>
