--- a/core/catalog/include_dept_productlist_loop_start.phtml
+++ b/core/catalog/include_dept_productlist_loop_start.phtml
@@ -106,12 +106,11 @@
 			if prod_on_sale then
 				adjusted_price = prod_sale_price
 			Else
-			If prod_retail_price > 0 Then
-				adjusted_price = prod_retail_price
-			Else
-				adjusted_price = FormatNumber(list_price,2)
-			End if
-				
+				'If prod_retail_price > 0 Then
+					'adjusted_price = prod_retail_price
+				'Else
+					adjusted_price = FormatNumber(list_price,2)
+				'End if
 			end if
 		
 			if Len(Session("CUSTOM_CATALOG_ID_FLAG")) > 0 then
@@ -157,7 +156,7 @@
 			'===================================================
 			
 			'ssImgSize = "upload/w_" & "200" & ",h_" & "200" & ",c_pad,bo_35px_solid_white/"
-			ssImgSize = "upload/w_" & EC_imageListWidth & ",h_" & EC_imageListWidth & ",c_pad,bo_35px_solid_white/"
+			ssImgSize = "upload/w_" & EC_imageListWidth & ",h_" & EC_imageListWidth & ",c_pad/"
 			
 			if prod_thumb_image = "--" then
 				cloudImg = g_noimage_url
