--- a/theme/marketshop1/include/footer.phtml
+++ b/theme/marketshop1/include/footer.phtml
@@ -1,66 +1,18 @@
 <!--Footer Start-->
-  <footer id="footer">
-    <div class="fpart-first">
-      <div class="container">
-        <div class="row">
-          <div class="contact col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <h5>Contact Details</h5>
-            <ul>
-              <li class="email"><i class="fa fa-envelope"></i>Send email via our <a href="contact-us.html">Contact Us</a>
-            </ul>
-          </div>
-          <div class="column col-lg-2 col-md-2 col-sm-3 col-xs-12">
-            <h5>Information</h5>
-            <ul>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="about-us.html">Delivery Information</a></li>
-              <li><a href="about-us.html">Privacy Policy</a></li>
-              <li><a href="about-us.html">Terms &amp; Conditions</a></li>
-            </ul>
-          </div>
-          <div class="column col-lg-2 col-md-2 col-sm-3 col-xs-12">
-            <h5>Customer Service</h5>
-            <ul>
-              <li><a href="contact-us.html">Contact Us</a></li>
-              <li><a href="#">Returns</a></li>
-              <li><a href="sitemap.html">Site Map</a></li>
-            </ul>
-          </div>
-          <div class="column col-lg-2 col-md-2 col-sm-3 col-xs-12">
-            <h5>Extras</h5>
-            <ul>
-              <li><a href="#">Brands</a></li>
-              <li><a href="#">Gift Vouchers</a></li>
-              <li><a href="#">Affiliates</a></li>
-              <li><a href="#">Specials</a></li>
-            </ul>
-          </div>
-          <div class="column col-lg-2 col-md-2 col-sm-3 col-xs-12">
-            <h5>My Account</h5>
-            <ul>
-              <li><a href="#">My Account</a></li>
-              <li><a href="#">Order History</a></li>
-              <li><a href="#">Wish List</a></li>
-              <li><a href="#">Newsletter</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="fpart-second">
-      <div class="container">
-        <div id="powered" class="clearfix">
-          <div class="powered_text pull-left flip">
-            <p>Hubutu, Inc. &copy; 2016</p>
-          </div>
-          <div class="social pull-right flip"> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/socialicons/facebook.png" alt="Facebook" title="Facebook"></a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/socialicons/twitter.png" alt="Twitter" title="Twitter"> </a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/socialicons/google_plus.png" alt="Google+" title="Google+"> </a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/socialicons/pinterest.png" alt="Pinterest" title="Pinterest"> </a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/socialicons/rss.png" alt="RSS" title="RSS"> </a> </div>
-        </div>
-        <div class="bottom-row">
-          <div class="payments_types"> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/payment/payment_paypal.png" alt="paypal" title="PayPal"></a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/payment/payment_american.png" alt="american-express" title="American Express"></a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/payment/payment_2checkout.png" alt="2checkout" title="2checkout"></a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/payment/payment_maestro.png" alt="maestro" title="Maestro"></a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/payment/payment_discover.png" alt="discover" title="Discover"></a> <a href="#" target="_blank"> <img data-toggle="tooltip" src="image/payment/payment_mastercard.png" alt="mastercard" title="MasterCard"></a> </div>
-        </div>
-      </div>
-    </div>
-    <div id="back-top"><a data-toggle="tooltip" title="Back to Top" href="javascript:void(0)" class="backtotop"><i class="fa fa-chevron-up"></i></a></div>
-  </footer>
-  <!--Footer End-->
+<footer id="footer">
+	<div class="fpart-first">
+	<%
+		g_static_block_code = "TPL_MARKETSHOP1_FOOTER_FIRST"
+	%>
+	<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"-->
+	</div>
+	<div class="fpart-second">
+	<%
+		g_static_block_code = "TPL_MARKETSHOP1_FOOTER_SECOND"
+	%>
+	<!--#INCLUDE FILE="../../../core/cms/include_show_static_block.phtml"--> 
+	</div>
+	<div id="back-top"><a data-toggle="tooltip" title="Back to Top" href="javascript:void(0)" class="backtotop"><i class="fa fa-chevron-up"></i></a></div>
+</footer>
+<!--Footer End-->
   
